terraform/modules/security_groups/main.tf
variable "vpc_id" {
  description = "ID of the VPC"
  type        = string
}

resource "aws_security_group" "wordpress_sg" {
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "wordpress-sg"
  }
}

output "wordpress_sg_id" {
  value = aws_security_group.wordpress_sg.id
}
